<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>bg.sarakt</groupId>
    <artifactId>sarakt.parents</artifactId>
    <version>0.1.0-ALPHA</version>
    <packaging>pom</packaging>
    <name>Base Sarakt Poject</name>
    <description>Generic RPG backbone</description>
    <url>https://www.worldanvil.com/w/sarakt-byzantian</url>
    <inceptionYear>2023</inceptionYear>

    <modules>
        <module>sarakt.core</module>
        <module>sarakt.storing</module>
        <module>sarakt.logging</module>
        <module>sarakt.attributes</module>
        <module>sarakt.base</module>
        <module>z.tools</module>
        <module>sarakt.characters</module>
    </modules>

    <properties>
        <sarakt.parent.version>0.1.0-ALPHA</sarakt.parent.version>
        <sarakt.attribute.version>0.0.15</sarakt.attribute.version>
        <sarakt.base.version>0.0.15</sarakt.base.version>
        <sarakt.characters.version>0.0.2</sarakt.characters.version>
        <sarakt.core.version>0.0.15</sarakt.core.version>
        <sarakt.logging.version>0.0.1</sarakt.logging.version>
        <sarakt.storing.version>0.0.15</sarakt.storing.version>
        <sarakt.z.tools.version>0.0.15</sarakt.z.tools.version>


        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jackson.version>2.16.0</jackson.version>
        <org.springframework.version>6.1.3</org.springframework.version>
        <org.springframework.data.version>3.1.3</org.springframework.data.version>
        <org.hibernate.version>6.4.0.FINAL</org.hibernate.version>
        <org.springframework.boot.version>3.2.2</org.springframework.boot.version>
        <org.junit.jupiter.version>5.10.1</org.junit.jupiter.version>
        <com.mysql.connector.version>8.3.0</com.mysql.connector.version>
    </properties>

    <licenses></licenses>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-assembly-plugin</artifactId>
                            <version>3.6.0</version>
                            <configuration>
                                <descriptorRefs>
                                    <descriptorRef>jar-with-dependencies</descriptorRef>
                                </descriptorRefs>
                            </configuration>
                        </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- fasterxml.jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- Database support -->
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${com.mysql.connector.version}</version>
            </dependency>

            <!-- Hibernate -->
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${org.hibernate.version}</version>
            </dependency>

            <!-- SPRING -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${org.springframework.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-orm</artifactId>
                <version>${org.springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${org.springframework.version}</version>
            </dependency>

            <!-- Spring boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-jpa</artifactId>
                <version>${org.springframework.boot.version}</version>
            </dependency>
            
            <!-- TEST -->
            <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.10.1</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>